# timer_test

./: Cargo.toml  sdkconfig.defaults  timer_test.code-workspace
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs  notification.rs
